--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html,
 body {
   max-width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
